# carroll

./: LICENSE  MD5SUMS  Makefile  Makefile.am  README.md  SHA256SUMS  autogen.sh  build.sh  config.h  configure.ac  debian_pkgs.deb  gdb.txt  readme.txt  test.c  test.run  test.run.save  update.sh
.github/: FUNDING.yml
debian_pkgs/DEBIAN/: control  postinst
docs/: bt_client.txt  bt_hci.txt  bt_readme.txt  bt_sck.txt  bt_server.txt  bt_socket.txt  client.txt  create_bt.txt  dbus_bt_address.txt  dbus_bt_audio.txt  dbus_bt_devices.txt  dbus_bt_microhone.txt  dbus_bt_name.txt  device_bt.txt  hci.txt  server.txt  snd.txt
driver/ctl10/: .Module.symvers.cmd  .bcd10.o.cmd  .ctl10.ko.cmd  .ctl10.o.cmd  .gen10.o.cmd  .modules.order.cmd  .mymodule.mod.cmd  Makefile  ctl10.c  gen10.c  libctl10.h  modules.order
driver/ice10/: .Module.symvers.cmd  .ctl10.mod.o.cmd  .gen.o.cmd  .gen10.o.cmd  .ice10.o.cmd  .modules.order.cmd  .xctl10.o.cmd  Makefile  gen10.c  ice10.c  libice10.h
driver/qtl10/: .Module.symvers.cmd  .ctl10.mod.cmd  .ctl10.o.cmd  .gen10.o.cmd  .ice10.o.cmd  .modules.order.cmd  .qtl10.o.cmd  .qtw10.o.cmd  .xctl10.ko.cmd  .xctl10.mod.cmd  .xctl10.mod.o.cmd  Makefile  gen10.c  libqtl10.h  (+1 more)
include/: devctl10.h  l2cap_lib.h  libcrt.h  libmic.h.old  libmod0.h.old  libred.h.old  md5.h  sha2.h
libcda/: main.c
libcrt/: ctime.c  md5.c  mod.c  sha2.c  sysnode.c
libdev/: main.c
libmic/: main.c
libqtw/: main.c
librmc/: main.c
libsnd/: main.c
module/: readme.txt
redm/: main.c
reds/: main.c
runexec/: readme.txt
src/: Makefile.am  Makefile.in  echo.c
(+117 files in other folders)
